kube-test-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kube-test-container
  name: kube-test-container
spec:
  replicas: 5
  selector:
    matchLabels:
      app: kube-test-container
  template:
    metadata:
      labels:
        app: kube-test-container
    spec:
      containers:
      - name: kube-test-container
        image: sverrirab/kube-test-container:v1.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 1
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 10Mi
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 1
          periodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
  name: kube-test-container
  namespace: lucasnet
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: kube-test-container
  type: ClusterIP
---
# Ingress for AWS ALB
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    kubernetes.io/ingress.class: alb
  labels:
    app: kube-test-container
  name: kube-test-container
  namespace: lucasnet
spec:
  rules:
    - http:
        paths:
          - path: /kube-test
            pathType: Prefix
            backend:
              service:
                name: kube-test-container
                port:
                  number: 80
---
# Ingress for Traefik
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kube-test-container
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /kube-test
            pathType: Prefix
            backend:
              service:
                name: kube-test-container
                port:
                  number: 80
